fix(ww): change highlight color in learn page for contrast

--- a/wordweb-app/src/main/resources/scss/learn.scss
+++ b/wordweb-app/src/main/resources/scss/learn.scss
@@ -347,5 +347,5 @@
 
 .highlighted {
   font-weight: $font-weight-bold;
-  color: rgb(0, 157, 181);
+  color: #3472AD;
 }
