--- a/wordweb-app/src/main/resources/view/css/styles.css
+++ b/wordweb-app/src/main/resources/view/css/styles.css
@@ -19255,7 +19255,7 @@ eki-shy {
 }
 .highlighted {
   font-weight: 700;
-  color: rgb(0, 157, 181);
+  color: #3472AD;
 }
 .etymology-tree .lang-code {
   position: relative;
